--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1024,6 +1024,10 @@
     "Security":"Безопасность",
     "date_time":"Дата и время",
     "enter_patient_id":"Введите идентификатор пациента",
-    "reg_number_if_aplicble":"Регистрационный номер (если применимо)"
+    "reg_number_if_aplicble":"Регистрационный номер (если применимо)",
+    "select_specility":"Выберите специальность",
+    "we_r_showing_speciality":"Мы показываем вам специалистов рядом",
+    "r_u_sure_update_inquiry":"Вы уверены, что обновите этот запрос?",
+    "organ_donar":"Донор"
   }
 }
