--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1025,6 +1025,10 @@
 		"Security":"Seguridad",
 		"date_time":"Fecha y hora",
 		"enter_patient_id":"Ingrese la identificación del paciente",
-		"reg_number_if_aplicble":"Número de registro (si corresponde)"
+		"reg_number_if_aplicble":"Número de registro (si corresponde)",
+		"select_specility":"Seleccionar especialidad",
+		"we_r_showing_speciality":"Te mostramos especialistas cerca",
+		"r_u_sure_update_inquiry":"¿Estás seguro de actualizar esta consulta?",
+		"organ_donar":"donante de órganos"
 	}
 }
