fix language issue in sw sp rs & nl

--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -535,73 +535,73 @@
 		"healthcare_access_for_non_conn_patient": "Acceso a datos de salud para pacientes no conectados",
 		"enter_pin": "Ingresar PIN",
 
-		"accept":"Accept",
-		"pharma_prescription":"Pharmacy Prescription",
-		"send_prescription_to_pharmacy":"Send prescriptions to pharmacies",
-		"uplod_scanned_prescription":"Upload scanned prescriptions",
-		"Pharmacy":"Pharmacy",
-		"search_pharmacy_by_name_id":"Search Pharmacy by name or ID",
-		"show_pharmacy_within_radious":"Show Pharmacies within my radius of",
-		"short_msg_optional":"Short message (optional)",
-		"add_this_patient_journal":"Add this to Patient Journal",
-		"send_invite":"Send invites",
-		"pharmacy_prescription_model":"Pharmacy Prescription Model",
-		"profile_information":"Profile information",
-		"this_is_ur_profile_info":"This is your profile information.",
-		"change_id":"Change ID",
-		"edit_id_or_pin":"Edit ID and PIN",
-		"profile_id_pin_changed":"Profile ID and PIN is changed",
-		"profile_id":"Profile ID",
-		"fax_nmbr":"Fax number",
-		"sub_specilaity":"Sub-specialty",
-		"profile_qr_code":"Profile QR code",
-		"the_info_update_succefully":"The information is updated succesfully",
-		"the_info_isnt_update_succ":"The information is not updated succesfully",
-		"offc_info":"Office information",
-		"this_is_what_patient_see_arrenging_appointment":"This is what patients see when they are arranging an appointment",
-		"we_offer":"We offer",
-		"the_appointment_srvc_success_updated":"The Appointment and Services succefully updated",
-		"plz_fill_break_timeslot_for_aapointment":"Please Fill the break timeslot for all the appoinments",
-		"instant_activation_deactivation_offer_srvc":"Instant activation and deactivation of services you offer",
-		"chat_vdocall":"Chat & Videocalls",
-		"invite_patient_to_contact_online":"Invite your patients to contact you online",
-		"prescription_and_sick_cert":"Prescriptions & Sick Certificates",
-		"issue_prescription_and_sickCert_online":"Issue prescriptions & sick certificates online",
-		"onine_sick_cert":"Online Sick Certificates",
-		"online_prescription":"Online Prescriptions",
-		"select_appointment_set_schedule":"Select appointment types and set your schedule",
-		"holiday_period_btw":"Holiday period between:",
-		"appointment_system":"Appointment System",
-		"offer_practice_online_appointment":"Offer practice and online appointment with",
-		"copy_time_to_all":"Copy time to all",
-		"set_timeslot_duration":"Set timeslot duration:",
-		"break_time":"Break time:",
-		"appointment_can_be_booked":"Appointment can be booked:",
-		"up_to_days":"Up to days",
+		"accept":"Aceptar",
+		"pharma_prescription":"Receta de farmacia",
+		"send_prescription_to_pharmacy":"Enviar recetas a farmacias",
+		"uplod_scanned_prescription":"Cargar recetas escaneadas",
+		"Pharmacy":"Farmacia",
+		"search_pharmacy_by_name_id":"Buscar farmacia por nombre o ID",
+		"show_pharmacy_within_radious":"Mostrar farmacias dentro de mi radio de",
+		"short_msg_optional":"Mensaje corto (opcional)",
+		"add_this_patient_journal":"Agregar esto al diario del paciente",
+		"send_invite":"Enviar invitaciones",
+		"pharmacy_prescription_model":"Modelo de prescripción de farmacia",
+		"profile_information":"Información del perfil",
+		"this_is_ur_profile_info":"Esta es la información de su perfil.",
+		"change_id":"Cambiar ID",
+		"edit_id_or_pin":"Editar ID y PIN",
+		"profile_id_pin_changed":"El ID de perfil y el PIN han cambiado",
+		"profile_id":"Perfil Id",
+		"fax_nmbr":"Número de fax",
+		"sub_specilaity":"Subespecialidad",
+		"profile_qr_code":"Código QR de perfil",
+		"the_info_update_succefully":"La información se actualiza con éxito",
+		"the_info_isnt_update_succ":"La información no se actualiza con éxito",
+		"offc_info":"Información de la oficina",
+		"this_is_what_patient_see_arrenging_appointment":"Esto es lo que ven los pacientes cuando programan una cita",
+		"we_offer":"Nosotros ofrecemos",
+		"the_appointment_srvc_success_updated":"La cita y los servicios se actualizaron con éxito",
+		"plz_fill_break_timeslot_for_aapointment":"Complete el intervalo de tiempo de descanso para todas las citas",
+		"instant_activation_deactivation_offer_srvc":"Activación y desactivación instantánea de los servicios que ofrece",
+		"chat_vdocall":"Chat y videollamadas",
+		"invite_patient_to_contact_online":"Invite a sus pacientes a que se comuniquen con usted en línea",
+		"prescription_and_sick_cert":"Recetas y certificados de enfermedad",
+		"issue_prescription_and_sickCert_online":"Emitir recetas y certificados de enfermedad en línea",
+		"onine_sick_cert":"Certificados de enfermedad en línea",
+		"online_prescription":"Recetas en línea",
+		"select_appointment_set_schedule":"Seleccione tipos de citas y establezca su horario",
+		"holiday_period_btw":"Periodo de vacaciones entre:",
+		"appointment_system":"Sistema de citas",
+		"offer_practice_online_appointment":"Ofrezca práctica y cita en línea con",
+		"copy_time_to_all":"Copiar tiempo a todos",
+		"set_timeslot_duration":"Establecer la duración del intervalo de tiempo:",
+		"break_time":"Descanso:",
+		"appointment_can_be_booked":"La cita se puede reservar:",
+		"up_to_days":"Hasta dias",
 		"Max":"Max",
-		"before_day_of_appointment":" before the day of appointment",
-		"hourse_before_time_appointment":"hours, before the time of appointment",
-		"add_new_patient":"Add new Patient",
-		"find_patient":"Find a patient...",
-		"patient_data_access":"Patient Data Access"	,
-		"private_doc_rest":"Private Doctor Request",
-		"age":"Age",
-		"not_mentioned":"Not  mentioned",
-		"openjournal":"Open Journal",
-		"personal_info":"Personal info",
-		"remove_patient":"Remove patient",
-		"ask_patient_to_become_a_private_doctor":"Ask patient to become a private doctor",
-		"email_or_id":"Email or ID",
-		"enter_patient_email_id":"Enter patients email or ID",
-		"Ask":"Ask",
-		"new_patient":"New Patient",
-		"add_new_patient_in_list":"Add new patient in your list",
-		"succ1" : "The mail is sent to the patient",
-		"Log_into": "Log in to",
-		"Mnotvalids": "Mobile number is not valid",
-		"password_reset": "Password Reset",
-		"click_here_uplod_license": "Click here to upload your license",
-		"password_must_have_its_condition": "Password must be have Capital letter and numeric value and more than 6 character",
+		"before_day_of_appointment":"antes del día de la cita",
+		"hourse_before_time_appointment":"horas, antes de la hora de la cita",
+		"add_new_patient":"Agregar nuevo paciente",
+		"find_patient":"Encontrar un paciente",
+		"patient_data_access":"Acceso a los datos del paciente"	,
+		"private_doc_rest":"Solicitud de médico privado",
+		"age":"Años",
+		"not_mentioned":"No mencionado",
+		"openjournal":"Diario abierto",
+		"personal_info":"Información personal",
+		"remove_patient":"Quitar paciente",
+		"ask_patient_to_become_a_private_doctor":"Pídale al paciente que se convierta en médico privado",
+		"email_or_id":"Correo electrónico o identificación",
+		"enter_patient_email_id":"Ingrese el correo electrónico o la identificación del paciente",
+		"Ask":"Pedir",
+		"new_patient":"Nuevo paciente",
+		"add_new_patient_in_list":"Agregar nuevo paciente en su lista",
+		"succ1" : "El correo se envía al paciente.",
+		"Log_into": "Iniciar sesión en",
+		"Mnotvalids": "El número de móvil no es válido",
+		"password_reset": "Restablecimiento de contraseña",
+		"click_here_uplod_license": "Haga clic aquí para cargar su licencia",
+		"password_must_have_its_condition": "La contraseña debe tener una letra mayúscula y un valor numérico y más de 6 caracteres",
 
 		"page_not_found":"Página no encontrada",
 		"page_temparary_unavailable":"Es posible que se haya eliminado la página que está buscando si se cambió el nombre o no está disponible temporalmente.",
