--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -533,83 +533,83 @@
 		"healthcare_access_for_non_conn_patient":"Healthdata upatikanaji kwa ajili ya mashirika yasiyo ya kushikamana na subira",
 		"enter_pin":"Kuingia Pin",
 
-		"accept":"Accept",
-		"pharma_prescription":"Pharmacy Prescription",
-		"send_prescription_to_pharmacy":"Send prescriptions to pharmacies",
-		"uplod_scanned_prescription":"Upload scanned prescriptions",
-		"Pharmacy":"Pharmacy",
-		"search_pharmacy_by_name_id":"Search Pharmacy by name or ID",
-		"show_pharmacy_within_radious":"Show Pharmacies within my radius of",
-		"short_msg_optional":"Short message (optional)",
-		"add_this_patient_journal":"Add this to Patient Journal",
-		"send_invite":"Send invites",
-		"pharmacy_prescription_model":"Pharmacy Prescription Model",
-		"profile_information":"Profile information",
-		"this_is_ur_profile_info":"This is your profile information.",
-		"change_id":"Change ID",
-		"edit_id_or_pin":"Edit ID and PIN",
-		"profile_id_pin_changed":"Profile ID and PIN is changed",
-		"profile_id":"Profile ID",
-		"fax_nmbr":"Fax number",
-		"sub_specilaity":"Sub-specialty",
-		"profile_qr_code":"Profile QR code",
-		"the_info_update_succefully":"The information is updated succesfully",
-		"the_info_isnt_update_succ":"The information is not updated succesfully",
-		"offc_info":"Office information",
-		"this_is_what_patient_see_arrenging_appointment":"This is what patients see when they are arranging an appointment",
-		"we_offer":"We offer",
-		"the_appointment_srvc_success_updated":"The Appointment and Services succefully updated",
-		"plz_fill_break_timeslot_for_aapointment":"Please Fill the break timeslot for all the appoinments",
-		"instant_activation_deactivation_offer_srvc":"Instant activation and deactivation of services you offer",
-		"chat_vdocall":"Chat & Videocalls",
-		"invite_patient_to_contact_online":"Invite your patients to contact you online",
-		"prescription_and_sick_cert":"Prescriptions & Sick Certificates",
-		"issue_prescription_and_sickCert_online":"Issue prescriptions & sick certificates online",
-		"onine_sick_cert":"Online Sick Certificates",
-		"online_prescription":"Online Prescriptions",
-		"select_appointment_set_schedule":"Select appointment types and set your schedule",
-		"holiday_period_btw":"Holiday period between:",
-		"appointment_system":"Appointment System",
-		"offer_practice_online_appointment":"Offer practice and online appointment with",
-		"copy_time_to_all":"Copy time to all",
-		"set_timeslot_duration":"Set timeslot duration:",
-		"break_time":"Break time:",
-		"appointment_can_be_booked":"Appointment can be booked:",
-		"up_to_days":"Up to days",
-		"Max":"Max",
-		"before_day_of_appointment":" before the day of appointment",
-		"hourse_before_time_appointment":"hours, before the time of appointment",
-		"add_new_patient":"Add new Patient",
-		"find_patient":"Find a patient...",
-		"patient_data_access":"Patient Data Access"	,
-		"private_doc_rest":"Private Doctor Request",
-		"age":"Age",
-		"not_mentioned":"Not  mentioned",
-		"openjournal":"Open Journal",
-		"personal_info":"Personal info",
-		"remove_patient":"Remove patient",
-		"ask_patient_to_become_a_private_doctor":"Ask patient to become a private doctor",
-		"email_or_id":"Email or ID",
-		"enter_patient_email_id":"Enter patients email or ID",
-		"Ask":"Ask",
-		"new_patient":"New Patient",
-		"add_new_patient_in_list":"Add new patient in your list",
-		"succ1" : "The mail is sent to the patient",
-		"Log_into": "Log in to",
-		"Mnotvalids": "Mobile number is not valid",
-		"password_reset": "Password Reset",
-		"click_here_uplod_license": "Click here to upload your license",
-		"password_must_have_its_condition": "Password must be have Capital letter and numeric value and more than 6 character",
-		"page_not_found":"Page Not Found",
-		"Oops":"Oops",
-		"page_temparary_unavailable":"The page you are looking for might have baeen removed had its name changed or its temporarily unavailable.",
-		"go_to_home":"Go to Home",
-		"code_not_verified":"Code is not verified.",
-		"email_not_valid":"Email is not valid",
-		"password_cant_empty":"Password can not be empty",
-		"user_not_exist":"User does not exist",
-		"user_is_blocked":"User is blocked",
-		"wrong_password":"Wrong password",
+		"accept":"Kubali",
+		"pharma_prescription":"Dawa ya Dawa",
+		"send_prescription_to_pharmacy":"Tuma maagizo kwa maduka ya dawa",
+		"uplod_scanned_prescription":"Pakia maagizo yaliyochanganuliwa",
+		"Pharmacy":"Duka la dawa",
+		"search_pharmacy_by_name_id":"Tafuta duka la dawa kwa jina au kitambulisho",
+		"show_pharmacy_within_radious":"Onyesha Maduka ya dawa ndani ya eneo langu la",
+		"short_msg_optional":"Ujumbe mfupi (hiari)",
+		"add_this_patient_journal":"Ongeza hii kwa Jarida la Mgonjwa",
+		"send_invite":"Tuma mialiko",
+		"pharmacy_prescription_model":"Mfano wa Dawa ya Dawa",
+		"profile_information":"Maelezo ya Profaili",
+		"this_is_ur_profile_info":"Hii ni maelezo yako mafupi.",
+		"change_id":"Badilisha Kitambulisho",
+		"edit_id_or_pin":"Hariri kitambulisho na PIN",
+		"profile_id_pin_changed":"Kitambulisho cha wasifu na PIN hubadilishwa",
+		"profile_id":"Kitambulisho cha Profaili",
+		"fax_nmbr":"Nambari ya faksi",
+		"sub_specilaity":"Utaalam mdogo",
+		"profile_qr_code":"Nambari ya wasifu ya QR",
+		"the_info_update_succefully":"Habari inasasishwa kwa ufanisi",
+		"the_info_isnt_update_succ":"Habari haijasasishwa kwa ufanisi",
+		"offc_info":"Maelezo ya ofisi",
+		"this_is_what_patient_see_arrenging_appointment":"Hivi ndivyo wagonjwa wanaona wakati wanapanga miadi",
+		"we_offer":"Tunatoa",
+		"the_appointment_srvc_success_updated":"Uteuzi na Huduma zilisasishwa vyema",
+		"plz_fill_break_timeslot_for_aapointment":"Tafadhali Jaza muda wa mapumziko kwa miadi yote",
+		"instant_activation_deactivation_offer_srvc":"Uanzishaji wa papo hapo na uzimaji wa huduma unazotoa",
+		"chat_vdocall":"Piga gumzo na Sauti za video",
+		"invite_patient_to_contact_online":"Alika wagonjwa wako kuwasiliana nawe mkondoni",
+		"prescription_and_sick_cert":"Maagizo & Vyeti vya Wagonjwa",
+		"issue_prescription_and_sickCert_online":"Toa maagizo & vyeti vya wagonjwa mkondoni",
+		"onine_sick_cert":"Vyeti vya Wagonjwa Mkondoni",
+		"online_prescription":"Maagizo ya Mtandaoni",
+		"select_appointment_set_schedule":"Chagua aina za miadi na uweke ratiba yako",
+		"holiday_period_btw":"Kipindi cha likizo kati ya:",
+		"appointment_system":"Mfumo wa Uteuzi",
+		"offer_practice_online_appointment":"Kutoa mazoezi na miadi mkondoni na",
+		"copy_time_to_all":"Nakili wakati kwa wote",
+		"set_timeslot_duration":"Weka muda wa muda:",
+		"break_time":"Wakati wa mapumziko:",
+		"appointment_can_be_booked":"Uteuzi unaweza kuhifadhiwa:",
+		"up_to_days":"Hadi siku",
+		"Max":"Upeo",
+		"before_day_of_appointment":" kabla ya siku ya uteuzi",
+		"hourse_before_time_appointment":"masaa, kabla ya wakati wa kuteuliwa",
+		"add_new_patient":"Ongeza Mgonjwa mpya",
+		"find_patient":"Pata mgonjwa ...",
+		"patient_data_access":"Upataji wa Takwimu za Wagonjwa"	,
+		"private_doc_rest":"Ombi la Daktari Binafsi",
+		"age":"Umri",
+		"not_mentioned":"Haikutajwa",
+		"openjournal":"Fungua Jarida",
+		"personal_info":"Maelezo ya kibinafsi",
+		"remove_patient":"Ondoa mgonjwa",
+		"ask_patient_to_become_a_private_doctor":"Uliza mgonjwa kuwa daktari wa kibinafsi",
+		"email_or_id":"Barua pepe au kitambulisho",
+		"enter_patient_email_id":"Ingiza barua pepe au kitambulisho cha wagonjwa",
+		"Ask":"Uliza",
+		"new_patient":"Mgonjwa Mpya",
+		"add_new_patient_in_list":"Ongeza mgonjwa mpya katika orodha yako",
+		"succ1" : "Barua hutumwa kwa mgonjwa",
+		"Log_into": "Ingia kwa",
+		"Mnotvalids": "Nambari ya simu si halali",
+		"password_reset": "Kuweka upya Nenosiri",
+		"click_here_uplod_license": "Bonyeza hapa kupakia leseni yako",
+		"password_must_have_its_condition": "Nenosiri lazima liwe na herufi kubwa na thamani ya nambari na zaidi ya herufi 6",
+		"page_not_found":"Ukurasa Haukupatikana",
+		"Oops":"Lo!",
+		"page_temparary_unavailable":"Ukurasa unaotafuta unaweza kuwa umeondoa baeen ikiwa jina lake limebadilishwa au halipatikani kwa muda.",
+		"go_to_home":"Nenda nyumbani",
+		"code_not_verified":"Nambari ya kuthibitisha haijathibitishwa.",
+		"email_not_valid":"Barua pepe sio halali",
+		"password_cant_empty":"Nenosiri haliwezi kuwa tupu",
+		"user_not_exist":"Mtumiaji hayupo",
+		"user_is_blocked":"Mtumiaji amezuiwa",
+		"wrong_password":"Nenosiri lisilo sahihi",
 		"capab_Doctors" : "Daktari",
 		"capab_Patients" : "Mgonjwa",
 		"Nurse" : "Muuguzi",
