Checked loggedout pages for language tranlation

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -259,7 +259,7 @@
 		"more": "Mehr",
 		"connect": "Verbinden",
 		"devices": "Geräte",
-		"services": "Services",
+		"services": "Dienstleistungen",
 		"search_for_device_palce": "Nach Gerät oder Service suchen...",
 		"view_details": "Details ansehen",
 		"Details": "Details",
