--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -8,9 +8,7 @@
 		"recEmp_LastName": "Achternaam",
 		"Register_Mobilenumber":"Mobiel nummer",
 		"Register_activate_auth":"Activeer 2-factor authenticatie",
-		"Register_Accounttype":"Account type",
-		"capab_Patients":"Geduldig",
-		"capab_Doctors": "Dokter",
+		"Register_Accounttype":"Account type",		
 		"Pharmacist":"Apotheker",
 		"Nurse": "Verpleegster",
 		"Professional":"Professioneel",
@@ -32,7 +30,6 @@
 		"Oops":"Oeps",
 		"page_temparary_unavailable":"De pagina die u zoekt, is mogelijk verwijderd, de naam is gewijzigd of is tijdelijk niet beschikbaar.",
 		"go_to_home":"Ga naar huis",
-		"slct_time_slot":"Selecteer een tijdvak",
 		"code_not_verified":"Code is niet geverifieerd.",
 		"email_not_valid":"E-mail is niet geldig",
 		"password_cant_empty":"Wachtwoord mag niet leeg zijn",
@@ -548,7 +545,7 @@
 		"srvc_Security": "Beveiliging",
 		"srvc_Certification": "Certificering",
 		"srvc_Equipment": "Apparatuur",
-		"srvc_Aimedis_consults": "Aimedis consults",
+		"srvc_Aimedis_consults": "Aimedis overlegt",
 		"srvc_Governments": "Overheden",
 		"srvc_Healthcare_Institutions": "Gezonheidszorg Instituten",
 		"srvc_Pharma_Research": "Farmaceutische sector & Research",
