trying git pull

--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -280,7 +280,7 @@
 		"ur_connected_device_appear": "Yako kushikamana vifaa itaonekana hapa",
 		"connct_a_device": "Kuungana kifaa",
 		"blockchain_access_log": "Blockchain Kupata Logi",
-		"profile_setting": "Profile Settings",
+		"profile_setting": "Mipangilio ya Profaili",
 		"log_type": "Ingia aina",
 		"created_by": "Kuundwa kwa",
 		"time_created": "Wakati umba",
